[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-to-anki"
version = "0.1.0"
description = "Convert Obsidian notes matching selected tags into Anki TSV cards."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
obsidian-to-anki = "obsidian_to_anki.cli:main"

[tool.setuptools.packages.find]
include = ["obsidian_to_anki*"]
